codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__goal_menu_usage_limited.snap
---
source: tui/src/chatwidget/tests/goal_menu.rs
expression: rendered_goal_summary(&mut rx)
---
目标
状态：受用量限制
内容：Keep improving the bare goal command until it feels calm and useful.
已用时间：1m
已用 Token：12.5K

命令：/goal edit、/goal resume、/goal clear
