codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_write_stdin_timed_out_history.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: lines_to_single_string(timeout)
---
✗ 审查已超时：codex could send input to terminal 42: "confirm\n"
